[package]
name = "moon-phases"
version = "0.1.0"
edition = "2021"
default-run = "moon-phases"

[dependencies]
actix = "0.13.1"
actix-files = "0.6.2"
actix-test = "0.1.2"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
bevy_ecs = "0.11.2"
chrono = "0.4.28"
env_logger = "0.10.0"
leptos = {version= "0.4.10", features = ["ssr"] }
log = "0.4.20"
moon-calc = "1.0.0"
reqwest = { version = "0.11.22", features = ["stream", "json"] }
serde = "1.0.188"
serde_derive = "1.0.190"
serde_json = "1.0.105"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
uuid = "1.5.0"


[dev-dependencies]
actix-rt = "2.9.0"
futures-util = "0.3.28"
futures = "0.3"
mockito = "1.2.0"


